--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <div class="navlinks"><a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a></div>
        <div class="navlinks"><a href="https://www.google.fr/imghp?hl=fr&tab=wi&ogbl">Images</a></div>
        <div class="apps"><a href="https://about.google/intl/fr/products/?tab=wh%22%3E%3Cspan" title="Applications Google" span class="material-icons">apps</a></div>
-       <div class="login"><a href="https://accounts.google.com/ServiceLogin?hl=fr&passive=true&continue=https://www.google.com/">Connexion</a></div>
+       <div><button href="https://accounts.google.com/ServiceLogin?hl=fr&passive=true&continue=https://www.google.com/" class="login">Connexion</button></div>
       
     </nav>
 
